fix(settingsmenu): add z-index to hidden menus

--- a/src/styles/player/chrome/settingsmenu.scss
+++ b/src/styles/player/chrome/settingsmenu.scss
@@ -62,6 +62,7 @@
 
 .chrome-panel[aria-hidden=true] {
   opacity: 0;
+  z-index: -1;
 }
 
 .chrome-panel-left {
